# rsgpr

./: .codespellrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  lint.sh  shell.nix
.github/workflows/: pre-commit.yml  rust.yml
assets/: test_dem_dtm20_mettebreen.tif
src/: cli.rs  coords.rs  dem.rs  gpr.rs  io.rs  main.rs  tools.rs
src/filters/: bandpass.rs  mod.rs
