[package]
name = "rsgpr"
version = "0.2.1"
edition = "2021"
readme = "README.md"

authors = ["Erik Schytt Mannerfelt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"   # For base ndarrays
ndarray-stats = "0.5.1"  # For ndarray statistics
chrono = "0.4.39"  # Convert timestamps to seconds before epoch
image = "0.24.6"  # Write images
smartcore = "0.3.2"  # (Linear) regression packages
noisy_float = "0.2.0"  # For inputs to ndarray-stats
rayon = "1.7.0"  # For parallelization of functions
netcdf = {version = "0.8.1", features = ["ndarray", "static"]}
clap = { version = "4.3.2", features = ["derive"] }
geomorph = "2.0.2"
utm = "*"
glob = "0.3.1"
parse_duration = "2.1.1"
num = "0.4.0"
biquad = "0.5.0"
enterpolation = "0.2"

[dev-dependencies]
tempfile = "3.5.0"
